# VideoInvoice

./: .gitignore  LOGO_DESIGN_BRIEF.md  README.md
api/: .env.example  README.md  docker-compose.yml
api/docs/: architecture.md
api/node_server/: .env.example  Dockerfile  package-lock.json  railway.toml
api/node_server/src/: app.js
api/node_server/src/middlewares/: auth.js
api/pdf_engine/: Dockerfile  main.py  requirements.txt
api/rust_engine/: Cargo.toml
api/rust_engine/src/: gemini.rs  main.rs  prompt.rs
app/: .gitignore  SETUP.md  app.json  config.ts  eas-build-pre-install.sh  eas.json  firebaseConfig.ts  package-lock.json  package.json
app/app/: _layout.tsx  paywall.tsx  preview.tsx  privacy-security.tsx  settings.tsx
app/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  onboarding.tsx  setup.tsx  signup.tsx  verify.tsx  welcome.tsx
app/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx  two.tsx
app/app/invoice/: [id].tsx
app/components/: EditScreenInfo.tsx  Themed.tsx  TutorialOverlay.tsx
app/constants/: Colors.ts
app/context/: AuthContext.tsx  SubscriptionContext.tsx  ThemeContext.tsx
app/scripts/preview-generator/: feature-graphic.html  generate.js  template.html
app/utils/: countries.ts  currency.ts  socialAuth.ts
docs/: SNAPQUOTE_PRD.md  STORE_SCREENSHOT_DESIGN_GUIDE.md
web/: next-sitemap.config.js  package-lock.json  package.json
web/public/: robots.txt  sitemap-0.xml  sitemap.xml
web/scripts/: generate-og.js  og-image.html
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/lib/: metadata.ts
(+32 files in other folders)
